Remove leftover item and block duration from numeric ID times